@@ -1,5 +1,7 @@
 2007-08-11  Luca Bruno  <lethalman88@gmail.com>
 
+	* syx/syx-primitives.c (FileStream_fileOp): assert the object is a string for nextPutAll:
+
 	* plugins/wingui/SConscript: fixed building
 
 	Renamed all 'class' to 'klass' for C++ compilation support.
